--- a/security.yaml
+++ b/security.yaml
@@ -2,15 +2,26 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        users_in_memory:
+            memory:
+                users:
+                    admin:
+                        password: '$2y$13$r5WX47jLVjlFx8EGV3HWsuCwZxJKEk5F5dYK842O5igmJVS9zQfJK' # admin123
+                        roles: ['ROLE_ADMIN']
+                    user:
+                        password: '$2y$13$r5WX47jLVjlFx8EGV3HWsuCwZxJKEk5F5dYK842O5igmJVS9zQfJK' # user123
+                        roles: ['ROLE_USER']
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
+            http_basic: ~
             provider: users_in_memory
 
             # activate different ways to authenticate
@@ -24,7 +35,7 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/dashboard, roles: ROLE_USER }
+       
 
 when@test:
     security:
